Working code for artist leads

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contoso Task Pane Add-in</title>
+    <title>TEST Prepress Art Queue</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -28,31 +28,31 @@
 <body class="ms-font-m ms-welcome ms-Fabric">
     <header class="ms-welcome__header ms-bgColor-neutralLighter">
         <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
-        <h1 class="ms-font-su">Welcome</h1>
+        <h1 class="ms-font-su">Welcome to the TEST Prepress Art Queue!</h1>
     </header>
     <section id="sideload-msg" class="ms-welcome__main">
-        <h2 class="ms-font-xl">Please sideload your add-in to see app body.</h2>
+        <h2 class="ms-font-xl">If you see this message, then you have a side-loading issue! You probably need to re-install your Microsoft Certs.</h2>
     </section>
     <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <h2 class="ms-font-xl"> Discover what Office Add-ins can do for you today! </h2>
+        <h2 class="ms-font-xl"> Here are some features that this taskpane will bring to your document! </h2>
         <ul class="ms-List ms-welcome__features">
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
-                <span class="ms-font-m">Achieve more with Office integration</span>
+                <i class="ms-Icon ms-Icon--Generate ms-font-xl"></i>
+                <span class="ms-font-m">Move rows of data to specific worksheets by assigning it an artist</span>
             </li>
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Unlock ms-font-xl"></i>
-                <span class="ms-font-m">Unlock features and functionality</span>
+                <i class="ms-Icon ms-Icon--HourGlass ms-font-xl"></i>
+                <span class="ms-font-m">Automatically calculates the pick-up and turn-around time for art projects</span>
             </li>
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
-                <span class="ms-font-m">Create and visualize like a pro</span>
+                <i class="ms-Icon ms-Icon--Filter ms-font-xl"></i>
+                <span class="ms-font-m">Automatically assigns and sorts data by priority</span>
             </li>
         </ul>
-        <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
+        <!-- <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
         <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Run</span>
-        </div>
+        </div> -->
     </main>
 </body>
 
