adiing validation dropdown auto updates

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -105,7 +105,13 @@
 
             <div class="split-left">
 
-              <label for="text-box-label" title="Required for submission">Product<span class="astrick">*</span></label><br>
+                <label for="text-box-label" title="Required for submission">Product<span class="astrick">*</span></label><br>
+                <select class="text-box sel grey-sel" id="product">
+                    <option disabled selected hidden>Choose a product...</option>
+                </select>
+
+
+              <!-- <label for="text-box-label" title="Required for submission">Product<span class="astrick">*</span></label><br>
               <select class="text-box sel grey-sel" id="product">
                 <option value="null" disabled selected hidden>Choose a product...</option>
                 <option value="Menu">Menu </option>
@@ -170,7 +176,7 @@
                 <option value="Marco's 30x40 Interior Window Cling National Offer - MPINTWC3040NO">Marco's 30x40 Interior Window Cling National Offer - MPINTWC3040NO</option>
                 <option value="Marco's Nutritional Guide - MPNutGuide">Marco's Nutritional Guide - MPNutGuide</option>
                 <option value="Other">Other</option>
-              </select>
+              </select> -->
 
             </div>
 
