All dropdowns linked to validation

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -285,13 +285,13 @@
 
               <div id="buttons">
                 <div class="submit-button">
-                  <input class="submit" type="submit" value="SUBMIT">
+                  <input class="butt" id="submit" type="submit" value="SUBMIT">
                 </div>
               </div>
 
               <div id="buttons">
                 <div class="submit-button">
-                  <input class="submit" type="submit" value="CLEAR">
+                  <input class="butt" id="clear" type="submit" value="CLEAR">
                 </div>
               </div>
 
